<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarUsuarioActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etCedula"
            android:hint="@string/Cedula"
            android:inputType="number"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etNombre"
            android:hint="@string/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etApellido"
            android:hint="@string/Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etApodo"
            android:hint="@string/Apodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditar"
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Verde_esmeralda"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
